now just listeners left to attach with buttons

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -12,6 +12,31 @@
 
 
 
+<div class="main-container">
+
+
+        <img id="profile-image" src="{% static 'images/profile.png' %}" alt="">
+        <p id="username">princy</p>
+        <p id="posts">Posts</p>
+        <p id="followers">Followers</p>
+        <p id="following">Following</p>
+        <button id="follow-unfollow-button">follow</button>
+        <p id="followers-count">10</p>
+        <p id="following-count">5</p>
+        <p id="posts-count">20</p>
+        <br>
+        <br>
+
+
+
+
+  
+</div>
+
+
+
+
+
 
 
 <div class="edit-post">
