--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -212,6 +212,8 @@ border-radius: 8px;
     width: 225px;
     height: 225px;
     left: 50px;
+    filter: drop-shadow(0px 4px 25px rgba(0, 0, 0, 0.25));
+    border-radius: 8px;
    
     }
 
