--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -43,9 +43,13 @@
    {% for post in posts %}
 
 
+
+
+   <div class="post-styling">
    <img id="post-image-profile" src="{{post.imageURL}}" alt="">
    <p id="post-content-profile">{{post.post_content}}</p>
    <p id="post-time">{{post.timestamp}}<p>
+   </div>
   
   
   
