--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -26,7 +26,7 @@
                 <p id="posts">Posts</p>
                 <p id="followers">Followers</p>
                 <p id="following">Following</p>
-                <button id="follow-unfollow-button">follow</button>
+                <button  class="btn btn-primary" id="follow-unfollow-button">follow</button>
                 <p id="followers-count">10</p>
                 <p id="following-count">5</p>
                 <p id="posts-count">20</p>
