--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -208,6 +208,28 @@ border-radius: 8px;
     font-size: 16px;
 }
 
+#post-like{
+
+    position: relative;
+    left:80px;
+    font-size: 16px;
+
+
+}
+
+#like-button{
+
+
+    position: relative;
+    width: 55px;
+    height: 55px;
+    left: 80px;
+    filter: drop-shadow(0px 4px 25px rgba(0, 0, 0, 0.25));
+    border-radius: 8px;
+
+
+}
+
 #post-image-profile{
     position: relative;
     width: 225px;
@@ -268,9 +290,18 @@ border-radius: 8px;
 
 .btn-primary{
 
-    color:#72747cf6;
+    
     background-color: #72747cf6;
 
+}
+
+.btn-danger{
+
+    width:35px;
+    height: 35px;
+    background-color: #aff387;
+  
+   
 }
 
 
