--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -15,7 +15,7 @@
 
 
 
-        <div class="container">
+        <div class="container" id="post-list">
         </div>
 
         <div class="main-container">
