like feature added now counter left

--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -299,7 +299,7 @@ border-radius: 8px;
 
     width:35px;
     height: 35px;
-    background-color: #aff387;
+    background-color: #ffffff;
   
    
 }
